tests/37-bytes-param-has-duplicates.stderr
error: encountered duplicate bytes parameter: duplicate set to 4
 --> $DIR/37-bytes-param-has-duplicates.rs:4:23
  |
4 | #[bitfield(bytes = 4, bytes = 4)]
  |                       ^^^^^

error: previous bytes parameter here
 --> $DIR/37-bytes-param-has-duplicates.rs:4:12
  |
4 | #[bitfield(bytes = 4, bytes = 4)]
  |            ^^^^^
